<resources>
    <string name="app_name">CurriculumVitae</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="work">Work</string>
    <string name="edu">Education</string>
    <string name="about">About this App</string>
    <string name="skills">Skills</string>
    <string name="name">Martin Kropf, BSc</string>
    <string name="call">Call</string>
    <string name="email">E-Mail</string>
    <string name="linked_in">LinkedIn</string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="work_head">Employments</string>

    <!-- WS Routes -->
    <string name="doLogin">login</string>
    <string name="hello">Hello </string>
    <string name="next">Next</string>
    <string name="differentAccount">Back</string>
    <string name="noAccount"><u>No Account yet? Contact me</u></string>
    <string name="sendMail">Send email...</string>
    <string name="doLogin2">login2</string>
    <string name="invalidUserError">This User was not found</string>
    <string name="noConnection">The server connection timed out</string>
    <string name="login">Login</string>
    <string name="fh_course_name">Bachelor degree programme Internet Technology</string>
    <string name="fh">FH Joanneum</string>
    <string name="year_fh">2010-2013</string>
    <string name="red_cross">Red Cross Güssing</string>
    <string name="comm_service">Community\nService</string>
    <string name="year_comm_service">2010</string>
    <string name="matriculation">A-Levels\nMain area: Informatics</string>
    <string name="borg">BORG-\nJennersdorf</string>
    <string name="year_borg">2005-2009</string>
    <string name="month_akaryon">July-November</string>
    <string name="akaryon_1">Internship/Part-Time</string>
    <string name="akaryon_2">PHP Development using CodeIgniter</string>
    <string name="year_akaryon">2012</string>
    <string name="akaryon">akaryon GmbH</string>
    <string name="year_nekom">2013-2015</string>
    <string name="nekom">Nekom GmbH</string>
    <string name="nekom_1">Android Development</string>
    <string name="nekom_2">Web Development</string>
    <string name="skill_android">After my internship as PHP-Developer I began working as an Android-Developer for the Nekom GmbH. We were mainly working on internal E-Commerce projects and showcases.</string>
    <string name="skill_android_rest">The Google Volley framework was used in addition to the GSON library for the communication between app and server. This way JSON based REST API\'s can be accessed fast and easily.</string>
    <string name="skill_android_ble">In the course of implementing a location based marketing showcase, I was able to gain experience using Bluetooth Low Energy and Beacons.</string>
    <string name="skill_android_security">Since we were working with external payment providers in our apps, security was always an important part.</string>
    <string name="skill_php">During my internship at akaryon GmbH, I was maintaining several smaller PHP projects. After my internship, I continued working part-time while continuing my studies. In this period I was part of a team which was working on a larger PHP project, using CodeIgniter and MySQL and also implemented several other frontend Projects.</string>
    <string name="skill_sketch">Da mein Interesse bei App-Projekten auch sehr dem UI und UX Design gilt, begann ich mich für die Erstellung von Icons und anderen Grafiken zu begeistern. Als Tool wählte ich hierzu <u>Sketch</u>, da es mir die Möglichkeit gibt, schnell einzelne Elemente aber auch Mockups und Designs für Apps zu erstellen.</string>
    <string name="skill_git">Seit etwa einem Jahr benutze ich Git als Versionsverwaltung meiner Wahl. Grund dafür war zunächste eine Umstellung innerhalb des Unternehmens, besonders die Performance und die Art des Branching und Merging waren ausschlaggebende Punkte auch bei privaten Projekten umzusteigen.</string>
    <string name="androidSkills">Android</string>
    <string name="otherSkills">Others</string>
    <string name="interest_unity">In meiner Freizeit versuche ich mich an der Spiele-Entwicklung mit Unity. Gerade die graphische Komponente begeistert mich hier sehr, auch wenn ich leider mit keinem großen künstlerischen Talent gesegnet bin.</string>
    <string name="interest_ios">Auch die Entwicklung für Apple Geräte findet spätestens seit der Vorstellung von Swift meine Beachtung. Anhand einiger Tutorials habe ich mich bereits an kleineren Apps versucht.</string>
    <string name="interest_raspberry">Als zentrales Thema meiner Bachelorarbeit erforschte ich die Möglichkeit, aus dem Raspberry ein funktionsfähiges Tablet zu bauen und es zu vermarkten. Mittlerweile kümmert sich der kleine Bastelrechner in Verbindung mit einer Pumpe, einem Server und einer App um die Bewässerung unserer Pflanzen am Balkon.</string>
    <string name="interests">Interests</string>
    <string name="title_activity_ar">ARActivity</string>
    <string name="invalidPinError">This Pin is not correct</string>
    <string name="noPinError">Please enter your pin</string>
    <string name="title_activity_about">AboutActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_content">Auf den folgenden Seiten werden  die einzelnen Funktionen dieser App genauer vorgestellt.</string>
    <string name="about_content2">Für den Login wurde ein NodeJS Server mit MongoDB aufgesetzt. Der Server stellt eine REST Schnittstelle bereit.</string>
    <string name="server">Server</string>
    <string name="about_content3">Zur Übertragung der Daten zwischen Server und App wird JSON verwendet. Das Google Volley Framework kümmert sich um den Aufruf der REST Schnittstelle am Server.</string>
    <string name="communication">Communication</string>
    <string name="about_content4">Alle Icons, Grafiken und Screens wurden mit Sketch erstellt und entworfen. Weiters wurde Zeplin verwendet, um aus den Screens Stylesheets zu erstellen, aus denen wiederum Farben und Abmessungen einfach entnommen werden können.</string>
    <string name="about_content5">Für den Augmented Reality Bereich wurde Wikitude verwendet. Da es sich um eine kostenlose Lizenz handelt wird das „Trial“ Wasserzeichen über das Bild gelegt.</string>
    <string name="design">Design</string>
    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
    <string name="aboutMe">About me</string>
    <string name="prompt_username">Username</string>
    <string name="augmented">Augmented Reality</string>
    <string name="ar_hint">Scannen Sie das dafür vorgesehene Bild in der E-Mail.</string>

</resources>
